<resources>
    <string name="app_name">NeWork</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_likes">Post likes</string>
    <string name="description_post_share">Post share</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="users">Users</string>
    <string name="retry_loading">Retry</string>
    <string name="error_network">There is no internet connection. Check the network.</string>
    <string name="error_db">Database error. Please try again later.</string>
    <string name="error_unknown">An unknown error has occurred.</string>
    <string name="incorrect_login_or_password">Incorrect login or password.</string>
    <string name="log_in_to_your_account">log in to your account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account_yet_register">Don\'t have an account yet? Register</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="login_cannot_be_empty">Login cannot be empty</string>
    <string name="the_user_is_not_registered">The user is not registered.</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="name">Name</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="create_account">Create account</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="passwords_don_t_match">Passwords don\'t match!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="choose_a_profile_picture">Choose a profile picture</string>
    <string name="description_select_photo">Select Photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="remove">Remove</string>
    <string name="the_user_is_already_registered">The user is already registered.</string>
    <string name="incorrect_photo_format">Incorrect photo format.</string>
    <string name="description_avatar">Avatar</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="event">Event</string>
    <string name="post">Post</string>
    <string name="registration">Registration</string>
    <string name="exiting_the_app">Exiting the app</string>
    <string name="are_you_sure_you_want_to_get_out">Are you sure you want to get out?</string>
    <string name="new_event">New Event</string>
    <string name="new_post">New Post</string>
    <string name="description_add_post">Add post</string>
    <string name="chooser_share_post">Share Post</string>
</resources>