<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/postsFragment">

    <!-- Главные экраны -->

    <fragment
        android:id="@+id/postsFragment"
        android:name="ru.netology.nework.fragment.PostsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_posts">
        <action
            android:id="@+id/action_postsFragment_to_detailedPostFragment"
            app:destination="@id/detailedPostFragment" />
        <action
            android:id="@+id/action_postsFragment_to_authenticationFragment"
            app:destination="@id/authenticationFragment" />
        <action
            android:id="@+id/action_postsFragment_to_registrationFragment"
            app:destination="@id/registrationFragment" />
        <action
            android:id="@+id/action_postsFragment_to_newPostFragment"
            app:destination="@id/newPostFragment" />
    </fragment>

    <fragment
        android:id="@+id/eventsFragment"
        android:name="ru.netology.nework.fragment.EventsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_events">
        <action
            android:id="@+id/action_eventsFragment_to_detailedEventFragment"
            app:destination="@id/detailedEventFragment" />
        <action
            android:id="@+id/action_eventsFragment_to_registrationFragment"
            app:destination="@id/registrationFragment" />
        <action
            android:id="@+id/action_eventsFragment_to_authenticationFragment"
            app:destination="@id/authenticationFragment" />
        <action
            android:id="@+id/action_eventsFragment_to_newEventFragment"
            app:destination="@id/newEventFragment" />
    </fragment>

    <fragment
        android:id="@+id/usersFragment"
        android:name="ru.netology.nework.fragment.UsersFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_users">
        <action
            android:id="@+id/action_usersFragment_to_detailedUserFragment"
            app:destination="@id/detailedUserFragment" />
        <action
            android:id="@+id/action_usersFragment_to_authenticationFragment"
            app:destination="@id/authenticationFragment" />
        <action
            android:id="@+id/action_usersFragment_to_registrationFragment"
            app:destination="@id/registrationFragment" />
    </fragment>

    <!-- Экраны деталей контента -->

    <fragment
        android:id="@+id/detailedEventFragment"
        android:name="ru.netology.nework.fragment.DetailedEventFragment"
        android:label="@string/event"
        tools:layout="@layout/fragment_detailed_event">
        <action
            android:id="@+id/action_detailedEventFragment_to_eventsFragment"
            app:destination="@id/eventsFragment" />
    </fragment>

    <fragment
        android:id="@+id/detailedPostFragment"
        android:name="ru.netology.nework.fragment.DetailedPostFragment"
        android:label="@string/post"
        tools:layout="@layout/fragment_detailed_post">
        <argument
            android:name="postContent"
            app:argType="string" />
        <action
            android:id="@+id/action_detailedPostFragment_to_postsFragment"
            app:destination="@id/postsFragment" />
    </fragment>

    <fragment
        android:id="@+id/detailedUserFragment"
        android:name="ru.netology.nework.fragment.DetailedUserFragment"
        android:label="{userName}"
        tools:layout="@layout/fragment_detailed_user">
        <argument
            android:name="userName"
            app:argType="string" />
        <action
            android:id="@+id/action_detailedUserFragment_to_usersFragment"
            app:destination="@id/usersFragment" />
    </fragment>

    <!-- Экраны авторизации и регистрации -->

    <fragment
        android:id="@+id/authenticationFragment"
        android:name="ru.netology.nework.fragment.AuthenticationFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_authentication">
        <action
            android:id="@+id/action_authenticationFragment_to_registrationFragment"
            app:destination="@id/registrationFragment" />
    </fragment>

    <fragment
        android:id="@+id/registrationFragment"
        android:name="ru.netology.nework.fragment.RegistrationFragment"
        android:label="@string/registration"
        tools:layout="@layout/fragment_registration">
        <action
            android:id="@+id/action_registrationFragment_to_authenticationFragment"
            app:destination="@id/authenticationFragment" />
    </fragment>

    <!-- Экраны создания нового контента -->

    <fragment
        android:id="@+id/newEventFragment"
        android:name="ru.netology.nework.fragment.NewEventFragment"
        android:label="@string/new_event"
        tools:layout="@layout/fragment_new_event">
        <action
            android:id="@+id/action_newEventFragment_to_eventsFragment"
            app:destination="@id/eventsFragment" />
    </fragment>

    <fragment
        android:id="@+id/newPostFragment"
        android:name="ru.netology.nework.fragment.NewPostFragment"
        android:label="@string/new_post"
        tools:layout="@layout/fragment_new_post">
        <action
            android:id="@+id/action_newPostFragment_to_postsFragment"
            app:destination="@id/postsFragment" />
    </fragment>

</navigation>